# Low-Cost-Mocap-Simulator

./: Cargo.toml  README.md
assets/: anim.blend  anim.blend1  anim.glb  fox.blend  scene.blend  scene.blend1  scene1.blend  scene1.blend1  scene2.blend  scene2.blend1  scene3.blend  scene3.blend1  scene4.blend  scene4.blend1  scene5.blend  scene5.blend1  scene6.blend  scene7.blend
examples/: fox.rs  shared.rs  simple.rs
src/: animation.rs  lib.rs  render_world.rs
src/encoder/: mem_encoder.rs  mod.rs
